Add partials and destroy action

--- a/app/views/pages/homepage.html.erb
+++ b/app/views/pages/homepage.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Home Page</h1>
-  <%= link_to "Link to About Page", about_path%>
+  <%= link_to "Alpha Blog", articles_path %> | <%= link_to "Link to About Page", about_path%>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">Navbar</a>
